idl_srcdir=$(top_srcdir)/Idl

include_HEADERS=lwrpc/types.h lwrpc/security.h \
	lwrpc/ntstatus.h lwrpc/winerror.h lwrpc/error.inc lwrpc/errcheck.h \
	byteops.h random.h rc4.h md4.h md5.h hmac_md5.h des.h crypto.h \
	lwrpc/sidhelper.h lwrpc/mpr.h lwrpc/rid.h lwrpc/unistrdef.h lwrpc/unicodestring.h \
	lwrpc/siddef.h lwrpc/phdef.h lwrpc/sddef.h lwrpc/sdflags.h lwrpc/allocate.h lwrpc/memptr.h \
	lwrpc/lsa.h lwrpc/lsabinding.h lwrpc/lsadefs.h \
	lwrpc/samr.h lwrpc/samrbinding.h lwrpc/userinfo.h lwrpc/aliasinfo.h lwrpc/domaininfo.h lwrpc/samrflags.h \
	lwrpc/netlogon.h lwrpc/netlogonbinding.h lwrpc/netrdefs.h \
	lwrpc/LM.h lwrpc/LMaccess.h lwrpc/LMjoin.h lwrpc/LMErr.h lwrpc/LMldap.h \
	lwrpc/LMdebug.h lwrpc/krb5pac.h lwrpc/krb5pacdefs.h lwrpc/errconv.h \
	lwrpc/LMcrypt.h lwrpc/LMmem.h

includedir=$(prefix)/include/lwrpc
